add other actvitiy and class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Submission BMAAP</string>
+    <string name="deskripsi">deskripsi</string>
+    <string name="name">Tanjiro</string>
+    <string name="about_me">About Me</string>
+    <string name="kimetsu_no_yaiba_wiki">Kimetsu no Yaiba Wiki</string>
 </resources>
